--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -3,21 +3,22 @@
     <div class="block blog-post shadow-z-1">
       <div class="blog-post__content">
         <div class="blog-post__title">
-          <h2>Weapon Stats and Year One Flawless</h2>
+          <h2>Charts and Maps</h2>
         </div>
         <ul class="blog-post__meta">
           <li>
-            <p><span class="material-icons">&#xE8DF;</span> Jan 2nd, 2015</p>
+            <p><span class="material-icons">&#xE8DF;</span> Jan 15th, 2016</p>
           </li>
         </ul>
         <div class="blog-post__text">
           <p>
-            We have <strong>upgraded our servers</strong> and are now collecting new data in <strong>realtime</strong>,
-            so your flawless counts will be updated within minutes of exiting the lighthouse.
+            So far we have finished collecting <strong>13</strong> out of 16 weeks in year one for your flawless counts.
+            We might even finish before trials ends this week, but no later than next week. We Promise.
           </p>
           <p>
-            We are halfway done collecting your year one flawless data and you will see an updated count on here very soon so keep an eye out. We also added longest account and character streak when you hover over the current streak section. Lastly, we replaced map stats with your top 7 used weapons on your
-            <strong><a href="http://my.destinytrialsreport.com/" target="_top">my.destinytrialsreport.com</a></strong> profiles.
+            We added a fun little chart to the sidebar that shows hourly average K/D for all trials matches played last week. <br/>
+            The differences in K/D is tiny and its accuracy is unconfirmed so dont let it psyche you out or prevent you from playing at peak hours.<br/>
+            Lastly, we added some map specific weapon stats that you can access by clicking info on the map image.
           </p>
           <p>
             <strong>Use Twitter?</strong> We have good news! We're now on Twitter as <a href="https://twitter.com/TrialsReport">@TrialsReport</a>. Please follow us for updates
