--- a/app/components/controls/bottom.partial.html
+++ b/app/components/controls/bottom.partial.html
@@ -1,3 +1,8 @@
+<div class="block__footer-dark block__footer--ad-dark">
+  <div class="ad-small">
+    <div adsense-small></div>
+  </div>
+</div>
 <div class="domain-switch">
   <div class="btn-group-justified">
     <a type="button" class="btn btn-default" ng-if="!subdomain" href="http://my.destinytrialsreport.com" target="_self">
