minor changes and cleanup

--- a/app/assets/css/elements/_block.scss
+++ b/app/assets/css/elements/_block.scss
@@ -59,7 +59,7 @@
   @include inset-shadow();
   margin-left: 0;
   margin-right: 0;
-  padding: 1em;
+  //padding: 1em;
   background: #292929;
 }
 
@@ -86,7 +86,7 @@
 }
 
 .block__footer--ad {
-  margin-top: 2em;
+  //margin-top: 2em;
 
   .ad {
     margin: auto;
