--- a/app/components/controls/bottom.partial.html
+++ b/app/components/controls/bottom.partial.html
@@ -1,6 +1,6 @@
 <div class="block__footer-dark block__footer--ad-dark">
-  <div class="ad-small">
-    <div adsense-small></div>
+  <div class="ad">
+    <div adsense></div>
   </div>
 </div>
 <div class="domain-switch">
