--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -31,11 +31,11 @@
           </p>
         </div>
       </div>
-      <div class="block__footer block__footer--ad">
-        <div class="ad">
-          <div adsense></div>
-        </div>
-      </div>
+      <!--<div class="block__footer block__footer&#45;&#45;ad">-->
+        <!--<div class="ad">-->
+          <!--<div adsense></div>-->
+        <!--</div>-->
+      <!--</div>-->
     </div>
   </article>
   <div class="home__aside" ng-if="lighthouseLeaderboard">
