--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -87,20 +87,20 @@
   </div>
 </div>
 
-<div class="kd-graph shadow-z-1">
-  <div class="kd-graph__container shadow-z-1">
-    <div class="kd-graph__now-indicator" ng-if="trialsInProgress" ng-style="{'left':nowIndicator + '%'}"></div>
-    <div class="kd-graph__day-indicators">
-      <div ng-repeat="day in dayIndicators track by $index"
-           ng-style="{'left': ($index === 0 ? '0%' : dayIndicators[$index-1].value+'%'), 'width': ($index === 0 ? day.value+'%' : (day.value === undefined ? 100 - dayIndicators[$index-1].value : dayIndicators[$index+1].value - day.value)+'%')}"
-           class="kd-graph__day-indicator">
-        <label ng-bind="day.label" title="{{day.label}}"></label>
-      </div>
-    </div>
-    <canvas id="line" class="chart chart-line" chart-data="chartValues" chart-labels="chartLabels"></canvas>
-  </div>
-  <div class="kd-graph__label">
-    <label>Avg players' K/D throughout last weekend</label>
-    <i class="material-icons icon--small" data-content="Times are in your local time. Please note that the differences are very small." bs-popover>&#xE8FD;</i>
-  </div>
-</div>
+<!--<div class="kd-graph shadow-z-1">-->
+  <!--<div class="kd-graph__container shadow-z-1">-->
+    <!--<div class="kd-graph__now-indicator" ng-if="trialsInProgress" ng-style="{'left':nowIndicator + '%'}"></div>-->
+    <!--<div class="kd-graph__day-indicators">-->
+      <!--<div ng-repeat="day in dayIndicators track by $index"-->
+           <!--ng-style="{'left': ($index === 0 ? '0%' : dayIndicators[$index-1].value+'%'), 'width': ($index === 0 ? day.value+'%' : (day.value === undefined ? 100 - dayIndicators[$index-1].value : dayIndicators[$index+1].value - day.value)+'%')}"-->
+           <!--class="kd-graph__day-indicator">-->
+        <!--<label ng-bind="day.label" title="{{day.label}}"></label>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--<canvas id="line" class="chart chart-line" chart-data="chartValues" chart-labels="chartLabels"></canvas>-->
+  <!--</div>-->
+  <!--<div class="kd-graph__label">-->
+    <!--<label>Avg players' K/D throughout last weekend</label>-->
+    <!--<i class="material-icons icon&#45;&#45;small" data-content="Times are in your local time. Please note that the differences are very small." bs-popover>&#xE8FD;</i>-->
+  <!--</div>-->
+<!--</div>-->
