--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -52,7 +52,7 @@
         <div class="first-in-lighthouse__content">
           <div class="stat first-in-lighthouse__players">
             <span ng-repeat="player in entry.players track by $index">
-              <a ng-href="http://my.destinytrialsreport.com/{{$parent.entry.platform === 1 ? 'xbox' : 'ps'}}/{{player}}"
+              <a ng-href="https://my.destinytrialsreport.com/{{$parent.entry.platform === 1 ? 'xbox' : 'ps'}}/{{player}}"
                  ng-bind="player" target="_blank">
               </a>
             </span>
