--- a/app/components/controls/bottom.partial.html
+++ b/app/components/controls/bottom.partial.html
@@ -5,10 +5,10 @@
 </div>
 <div class="domain-switch">
   <div class="btn-group-justified">
-    <a type="button" class="btn btn-default" ng-if="!subdomain" href="http://my.destinytrialsreport.com" target="_self">
+    <a type="button" class="btn btn-default" ng-if="!subdomain" href="https://my.destinytrialsreport.com" target="_self">
       <span class="highlight">my</span>Report
     </a>
-    <a type="button" class="btn btn-default" ng-if="subdomain" href="http://www.destinytrialsreport.com" target="_self">
+    <a type="button" class="btn btn-default" ng-if="subdomain" href="https://destinytrialsreport.com" target="_self">
       <span class="highlight">trials</span>Report
     </a>
     <a type="button" class="btn btn-default" href="https://guardian.gg" target="_blank"
