replace blog with other content, minor updates and cleanup

--- a/app/assets/css/elements/_block.scss
+++ b/app/assets/css/elements/_block.scss
@@ -85,6 +85,20 @@
   }
 }
 
+.block__footer--ggg {
+  padding-left: 2em;
+  padding-right: 2em;
+
+  img {
+    height: 3em;
+  }
+
+  label {
+    width: 80%;
+    vertical-align: middle;
+  }
+}
+
 .block__footer--ad {
   //margin-top: 2em;
 
