--- a/app/assets/css/parts/first-in-lighthouse.scss
+++ b/app/assets/css/parts/first-in-lighthouse.scss
@@ -1,3 +1,8 @@
+.first-in-lighthouse__container {
+  margin-left: -2.1em;
+  margin-right: -2.1em;
+}
+
 .first-in-lighthouse__label {
   background-size: cover;
   background-repeat: no-repeat;
@@ -45,6 +50,14 @@
   span img {
     height: 1em;
     filter: brightness(0.4);
+  }
+
+  p {
+    text-align: center;
+    img {
+      height: 1.8em;
+      filter: brightness(0.4);
+    }
   }
 
   span + label + span {
