--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -69,7 +69,7 @@
       <button type="button" class="btn btn-default btn-sm"
               ng-click="resetMapVars(); loadMapInfo(currentMapId)"
               data-template-url="shared/modals/mapinfo.modal.html" bs-modal>
-        Info
+        Previous Maps
       </button>
     </div>
     <div class="current-map__btn" ng-if="currentMap.heatmapImage">
