update donator link

--- a/app/components/controls/bottom.partial.html
+++ b/app/components/controls/bottom.partial.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="donate">
-  <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=A3T6F2QDXUTCN" target="_blank"
+  <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=5UR8BVAZQHBUW&lc=US&currency_code=USD" target="_blank"
      analytics-on analytics-event="Click" analytics-category="Donate">
     <div class="donate__title">
       Help us run this site, donate with <img src="/assets/img/paypal.svg" alt="PayPal">
