fix menu issue on android stock browsers

--- a/app/assets/css/main/_layout.scss
+++ b/app/assets/css/main/_layout.scss
@@ -100,7 +100,7 @@
   .focus-on-players {
     .controls-wrapper {
       position: fixed;
-      transform: translateY(120vh);
+      transform: translateY(120%);
     }
 
     .overlay {
