--- a/app/assets/css/parts/_player.scss
+++ b/app/assets/css/parts/_player.scss
@@ -98,7 +98,7 @@
   }
 
   .focus-on-player-three .players {
-    transform: translateX(-44vw);
+    transform: translateX(-44%);
   }
 }
 
@@ -110,11 +110,11 @@
   }
 
   .focus-on-player-two .players {
-    transform: translateX(-92.5vw);
+    transform: translateX(-92.5%);
   }
 
   .focus-on-player-three .players {
-    transform: translateX(-186vw);
+    transform: translateX(-186%);
   }
 
   .focus-on-player-two,
