--- a/app/assets/css/parts/_home.scss
+++ b/app/assets/css/parts/_home.scss
@@ -26,7 +26,9 @@
 .home__aside {
   padding: 0 1em;
   display: flex;
+  display: -webkit-box;
   flex-direction: column;
+  -webkit-box-orient: vertical;
 
   > .block {
     flex-grow: 1;
