--- a/app/assets/css/parts/_player-quick-look.scss
+++ b/app/assets/css/parts/_player-quick-look.scss
@@ -85,7 +85,6 @@
 
 .player-quick-look__hide-stats {
   min-height: 10.82em;
-  padding-top: 1.5em;
   position:relative;
   .row {
     margin-top: .5em;
@@ -96,6 +95,12 @@
 .hide-stats__no-stats {
   text-align: center;
   margin-top: 2em;
+}
+
+.hide-stats__header {
+  margin: 0;
+  text-align: center;
+  font-size: .8em;
 }
 
 .hide-stats__labels {
