--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -30,7 +30,8 @@
   </div>
   </div>
   <div class="player__content player-quick-look player-quick-look__hide-stats" ng-if="hideStats">
-    <div class="player-overlay-content__header hide-stats__no-stats" ng-if="player.lastWeapons.length < 1">No Matches Played in Year 2</div>
+    <div class="player-overlay-content__header hide-stats__no-stats" ng-if="player.lastWeapons.length < 1">No Matches Found in Year 2</div>
+    <div class="player-overlay-content__header hide-stats__header" ng-if="player.lastWeapons.length > 0">Most Used Weapons by Class</div>
     <div class="row" ng-repeat="weapon in player.lastWeapons | orderObjectBy:'matches_played'">
       <div class=" col-xs-3">
         <img class="weapon-type-icon img-responsive"
