replace per match with total kill percentage

--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -40,7 +40,7 @@
       </div>
       <div class=" col-xs-3">
         <div class="">
-          <span ng-bind="(weapon.per_match / player.lastWeaponTotalPerMatch) * 100 | number:2"></span>%
+          <span ng-bind="(weapon.sum_kills / player.lastWeaponTotalKills) * 100 | number:2"></span>%
         </div>
       </div>
       <div class=" col-xs-3">
@@ -59,7 +59,7 @@
         <label class="data-label">Weapon Type</label>
       </div>
       <div class=" col-xs-3">
-        <label class="data-label">Kills per match</label>
+        <label class="data-label">Total Kills</label>
       </div>
       <div class=" col-xs-3">
         <label class="data-label">Accuracy</label>
