fix clipping issue with weapon stats popover & general style improvements to them

--- a/app/assets/css/parts/_player-weapons.scss
+++ b/app/assets/css/parts/_player-weapons.scss
@@ -124,7 +124,8 @@
 
 .weapon__stats-link {
   cursor: pointer;
-  margin-left: .1em;
+  margin-right: -1.1em;
+  padding-right: 1.3em;
   float: right;
   
   i {
