updated error handling and add fallback url to api name search

--- a/app/components/controls/bottom.partial.html
+++ b/app/components/controls/bottom.partial.html
@@ -1,10 +1,9 @@
 <div class="domain-switch">
   <div class="btn-group-justified">
-    <a type="button" class="btn btn-default" style="padding-right: 0;"
+    <a type="button" class="btn btn-default"
        title="Toggle Stats" ng-click="toggleStats()"
        analytics-on analytics-event="Toggle Stats" analytics-category="Toggle Stats">
       <span class="highlight" ng-bind="hideStats ? 'Show' : 'Hide'"></span> Stats
-      <i class="material-icons highlight" style="line-height: 0;">&#xE031;</i>
     </a>
     <!--<a type="button" class="btn btn-default" href="https://guardian.gg" target="_blank"-->
        <!--analytics-on analytics-event="Click" analytics-category="GGG Controls">-->
