temp update for crimson doubles until trials starts

--- a/app/assets/css/inc/_colors.scss
+++ b/app/assets/css/inc/_colors.scss
@@ -1,7 +1,7 @@
 $main-dark: #333;
 $xbox-main: #107C10;
 $playstation-main: #0066C2;
-$trials-gold: #FFD700;
+$trials-gold: #BE4B5A;
 $success: #00C853;
 $fail: #D50000;
 $info: #03A9F4;
