add blog image and fix carousel

--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -1,14 +1,10 @@
 <div class="home__content">
   <article class="home__main">
     <div class="block blog-post shadow-z-1">
-      <div class="modal-hero blog-image" ng-style="{'background-image':'url(' + currentMap.pgcrImage + ')'}">
+      <div class="modal-hero blog-image" ng-style="{'background-image':'url(assets/img/crimson.jpg)'}">
         <div class="w-100">
-          <div class="modal-hero__title" ng-bind="currentMap.name"></div>
-          <div class="modal-hero__label" ng-bind="currentMapInfo.mapInfo.weekText"></div>
-        </div>
-        <div class="modal-stats">
-          <div class="modal-hero__stats" ng-bind="currentMapInfo.mapInfo.lighthouse | number"></div>
-          <div class="modal-hero__description">Flawless runs</div>
+          <div class="modal-hero__title">Crimson Doubles</div>
+          <div class="modal-hero__label">This Week</div>
         </div>
       </div>
       <div class="blog-post__content">
