--- a/app/components/controls/bottom.partial.html
+++ b/app/components/controls/bottom.partial.html
@@ -20,6 +20,11 @@
        analytics-on analytics-event="Click" analytics-category="FAQ">
       <span class="highlight">FAQ</span>
     </a>
+    <!--<a type="button" class="btn btn-default"-->
+       <!--title="Doubles" href="https://doubles.destinytrialsreport.com"-->
+       <!--analytics-on analytics-event="Click" analytics-category="Doubles">-->
+      <!--<span class="highlight">C</span>Doubles-->
+    <!--</a>-->
   </div>
 </div>
 
