--- a/app/components/controls/bottom.partial.html
+++ b/app/components/controls/bottom.partial.html
@@ -3,7 +3,7 @@
     <a type="button" class="btn btn-default"
        title="Toggle Stats" ng-click="toggleStats()"
        analytics-on analytics-event="Toggle Stats" analytics-category="Toggle Stats">
-      <span class="highlight" ng-bind="hideStats ? 'Show' : 'Hide'"></span> Stats
+      <span class="highlight" ng-bind="hideStats ? 'Show' : 'Hide'"></span>Stats
     </a>
     <!--<a type="button" class="btn btn-default" href="https://guardian.gg" target="_blank"-->
        <!--analytics-on analytics-event="Click" analytics-category="GGG Controls">-->
@@ -15,11 +15,17 @@
     <a type="button" class="btn btn-default" ng-if="subdomain" href="https://destinytrialsreport.com" target="_self">
       <span class="highlight">trials</span>Report
     </a>
-    <a type="button" class="btn btn-default"
-       title="FAQ" data-content-template="shared/modals/faq.modal.html" bs-modal
-       analytics-on analytics-event="Click" analytics-category="FAQ">
-      <span class="highlight">FAQ</span>
+    <a type="button" class="btn btn-default" ng-if="!sdOpponents" href="https://opponents.destinytrialsreport.com" target="_self">
+      <span class="highlight hide-on-sm">my</span>Opponents
     </a>
+    <a type="button" class="btn btn-default" ng-if="sdOpponents" href="https://destinytrialsreport.com" target="_self">
+      <span class="highlight">trials</span>Report
+    </a>
+    <!--<a type="button" class="btn btn-default"-->
+       <!--title="FAQ" data-content-template="shared/modals/faq.modal.html" bs-modal-->
+       <!--analytics-on analytics-event="Click" analytics-category="FAQ">-->
+      <!--<span class="highlight">FAQ</span>-->
+    <!--</a>-->
     <!--<a type="button" class="btn btn-default"-->
        <!--title="Doubles" href="https://doubles.destinytrialsreport.com"-->
        <!--analytics-on analytics-event="Click" analytics-category="Doubles">-->
