--- a/app/components/home/opponents.partial.html
+++ b/app/components/home/opponents.partial.html
@@ -7,30 +7,33 @@
       </div>
       <div class="top-weapons__type" style="min-height: 112px;">
         <div class="row">
-          <div class="col-xs-4">
-            <label class="top-weapons__label">Player</label>
+          <div class="col-xs-6">
+            <label class="top-weapons__label">
+              <a href="#" ng-click="archEnemies(!archToggled)" ng-bind="archToggled ? 'Nemesis' : 'Player' "></a>
+              <span> (click for <span ng-bind="archToggled ? 'Player' : 'Nemesis' "></span>)</span>
+            </label>
           </div>
-          <div class="col-xs-4 stat">
+          <div class="col-xs-2 stat">
             <label> Standing </label>
           </div>
           <div class="col-xs-4 stat">
-            <a href="#" ng-click="orderByField='kd'; reverseSort = !reverseSort">
             <label>
+            <a href="#" ng-click="orderByField='kd'; reverseSort = !reverseSort" style="display: block; float: left">
               Opponent KD
               <span class="d-block pull-right" ng-show="orderByField == 'kd'">
-                <i ng-hide="reverseSort" class="material-icons">&#xE316;</i>
-                <i ng-show="reverseSort" class="material-icons">&#xE313;</i>
+                <i ng-hide="reverseSort" class="material-icons" style="font-size: 16px;line-height: 10px;">&#xE316;</i>
+                <i ng-show="reverseSort" class="material-icons" style="font-size: 16px;line-height: 10px;">&#xE313;</i>
               </span>
-            </label>
               </a>
+            </label>
           </div>
         </div>
         <div class="row top-weapon" dir-paginate="opponent in opponents | orderBy:orderByField:reverseSort | itemsPerPage: 15" style="margin-top: 0; padding-top: .75em; cursor: pointer; cursor: hand;"
              ng-click="getMatchDetails(opponent.instanceId)" ng-class="{'active-player': matchResults.activityDetails.instanceId == opponent.instanceId}">
-          <div class="col-xs-4 last-weapon-weapon__descr">
+          <div class="col-xs-6 last-weapon-weapon__descr">
             <span class="last-match-weapon__title" style="line-height: 1.3;" ng-bind="opponent.displayName"></span>
           </div>
-          <div class="col-xs-4 stat">
+          <div class="col-xs-2 stat">
             <span class="last-match-weapon__title" style="line-height: 1.3;"
                   ng-bind="opponent.standing === '1' ? 'Won' : 'Lost'"></span>
           </div>
@@ -43,9 +46,9 @@
       </div>
     </article>
   </div>
-  <article class="home__main">
+  <article class="home__main" style="min-height: 51em;">
     <div class="block blog-post shadow-z-1" ng-if="!matchResults">
-      <div class="blog-post__img" ng-style="{'background-image':'url(' + currentMap.pgcrImage + ')'}"></div>
+      <div class="blog-post__img blog-image" ng-style="{'background-image':'url(' + currentMap.pgcrImage + ')'}" style="flex-grow: 1;"></div>
       <div class="blog-post__content">
         <div class="blog-post__title">
           <h2>Search Year 2 Trials Opponents: Beta</h2>
@@ -76,7 +79,7 @@
       </div>
     </div>
     <div class="block blog-post shadow-z-1" ng-if="matchResults">
-      <div class="blog-post__img" ng-style="{'background-image':'url(' + matchResults.map.pgcrImage + ')'}" style="flex-grow: 0;"></div>
+      <div class="blog-post__img blog-image" ng-style="{'background-image':'url(' + matchResults.map.pgcrImage + ')'}" style="flex-grow: 1;"></div>
       <div class="blog-post__content">
         <div class="blog-post__title">
           <h2 ng-bind="matchResults.map.name"></h2>
