--- a/app/assets/css/parts/_player-cooldowns.scss
+++ b/app/assets/css/parts/_player-cooldowns.scss
@@ -3,6 +3,7 @@
   font-family: 'Roboto Condensed';
   color: #666;
   margin-bottom: .3em;
+  font-size: 13px;
 }
 
 .player-cooldown__nr .progress {
