--- a/app/assets/css/parts/_player.scss
+++ b/app/assets/css/parts/_player.scss
@@ -155,7 +155,8 @@
 }
 
 .player__content {
-  padding: $player-content-padding;
+  //padding: $player-content-padding;
+  padding: .6em 1em .6em 1em;
 }
 
 .player__links {
