--- a/app/assets/css/elements/_stats.scss
+++ b/app/assets/css/elements/_stats.scss
@@ -25,7 +25,7 @@
 }
 
 .stat-row:not(:first-child) {
-  margin-top: 1em;
+  margin-top: .82em;
 }
 
 .stat__kills:nth-child(n+4) {
@@ -33,7 +33,7 @@
 }
 
 .stat-row__header {
-  margin-top: 1.5em;
+  margin-top: .9em;
   margin-bottom: -.5em;
   text-transform: uppercase;
   color: #999;
