--- a/app/assets/css/elements/_tabs.scss
+++ b/app/assets/css/elements/_tabs.scss
@@ -69,7 +69,8 @@
 }
 
 .player-tab__section {
-  padding: $player-content-padding;
+  //padding: $player-content-padding;
+  padding: .7em 1em .7em 1em;
   border-bottom: 1px solid rgba(0, 0, 0, .1);
   box-shadow: 0 1px 0 0 rgba(255, 255, 255, .7);
 }
